Lesson 3 final commit

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -12,7 +12,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkRELrXe0rbB-qJJD_bd5ITagXIyHZSYgExo6fw2QKeLf87mPCew') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
